Now looks better

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -8,6 +8,15 @@ body:
       value: |
         Before reporting an issue make sure you are running the latest build of Leaf and checked for duplicate issues!
 
+  - type: checkboxes
+    attributes:
+      label: Is there an existing issue for this?
+      description: |
+        Please search to see if an issue already exists for the bug you encountered.
+      options:
+      - label: I have searched the existing issues
+        required: true
+  
   - type: textarea
     attributes:
       label: What behaviour is observed?
@@ -51,11 +60,9 @@ body:
   - type: input
     attributes:
       label: Error log (if applicable)
-      description: If you are reporting a console error, upload any relevant log excerpts to either https://mclo.gs/ or https://gist.github.com, save and the paste the link in this box.
+      description: If you are reporting a console error, upload any relevant log excerpts to either https://mclo.gs or https://gist.github.com, save and the paste the link in this box.
 
   - type: input
     attributes:
       label: Configuration
-      description: Link of your Leaf & Gale config files, upload any relevant log excerpts to either https://paste.gg/ or https://gist.github.com, save and the paste the link in this box.
-    validations:
-      required: true
+      description: Link of your Leaf & Gale config files, upload any relevant log excerpts to either https://paste.gg or https://gist.github.com, save and the paste the link in this box.
