Only release mojmap

--- a/.github/workflows/build-121.yml
+++ b/.github/workflows/build-121.yml
@@ -60,5 +60,5 @@ jobs:
           title: "Leaf 1.21"
           automatic_release_tag: "ver-1.21"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          files: "./leaf-1.21-*.jar"
+          files: "./leaf-1.21-mojmap.jar"
           prerelease: false
