Only release mojmap for now
Since no reason to use reobf jar above 1.20.5

--- a/.github/workflows/build-121.yml
+++ b/.github/workflows/build-121.yml
@@ -28,13 +28,10 @@ jobs:
         run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" applyPatches --stacktrace --no-daemon
       - name: Create MojmapPaperclipJar
         run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" createMojmapPaperclipJar --stacktrace --no-daemon
-      - name: Create ReobfPaperclipJar
-        run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" createReobfPaperclipJar --stacktrace --no-daemon
 
       - name: Rename Paperclip Jar
         run: |
-          mv build/libs/leaf-paperclip-1.21-R0.1-SNAPSHOT-mojmap.jar ./leaf-1.21-mojmap.jar
-          mv build/libs/leaf-paperclip-1.21-R0.1-SNAPSHOT-reobf.jar ./leaf-1.21-reobf.jar
+          mv build/libs/leaf-paperclip-1.21-R0.1-SNAPSHOT-mojmap.jar ./leaf-1.21.jar
 
 # Publish manually instead of using workflow
 #      - name: Publish API
@@ -51,7 +48,7 @@ jobs:
         uses: actions/upload-artifact@main
         with:
           name: Leaf 1.21
-          path: ./leaf-1.21-*.jar
+          path: ./leaf-1.21.jar
 
       - name: Release Leaf
         if: github.event_name != 'pull_request'
@@ -60,5 +57,5 @@ jobs:
           title: "Leaf 1.21"
           automatic_release_tag: "ver-1.21"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          files: "./leaf-1.21-*.jar"
+          files: "./leaf-1.21.jar"
           prerelease: false
