Revert `Only release mojmap for now`
This reverts commit 6588c2aa91a209c5bb14036ff655b71fe914adc2.

--- a/.github/workflows/build-121.yml
+++ b/.github/workflows/build-121.yml
@@ -28,10 +28,13 @@ jobs:
         run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" applyPatches --stacktrace --no-daemon
       - name: Create MojmapPaperclipJar
         run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" createMojmapPaperclipJar --stacktrace --no-daemon
+      - name: Create ReobfPaperclipJar
+        run: ./gradlew -Dorg.gradle.jvmargs="-Dgraal.CompilerConfiguration=enterprise -Dgraal.UsePriorityInlining=true -Dgraal.Vectorization=true -Dgraal.OptDuplication=true --add-modules jdk.incubator.vector" createReobfPaperclipJar --stacktrace --no-daemon
 
       - name: Rename Paperclip Jar
         run: |
-          mv build/libs/leaf-paperclip-1.21-R0.1-SNAPSHOT-mojmap.jar ./leaf-1.21.jar
+          mv build/libs/leaf-paperclip-1.21-R0.1-SNAPSHOT-mojmap.jar ./leaf-1.21-mojmap.jar
+          mv build/libs/leaf-paperclip-1.21-R0.1-SNAPSHOT-reobf.jar ./leaf-1.21-reobf.jar
 
 # Publish manually instead of using workflow
 #      - name: Publish API
@@ -48,7 +51,11 @@ jobs:
         uses: actions/upload-artifact@main
         with:
           name: Leaf 1.21
-          path: ./leaf-1.21.jar
+          path: ./leaf-1.21-*.jar
+
+      - name: Rename Paperclip Jar
+        run: |
+          mv ./leaf-1.21-mojmap.jar ./leaf-1.21.jar
 
       - name: Release Leaf
         if: github.event_name != 'pull_request'
