--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -51,7 +51,7 @@ jobs:
 
       - uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
+          distribution: 'zulu'
           java-version:  21
 
       - name: Running tests before push
