--- a/.github/workflows/build-1211.yml
+++ b/.github/workflows/build-1211.yml
@@ -1,10 +1,8 @@
-name: Build Leaf 1.21.1
+name: Build Leaf 1.21.1 - rv fix
 
 on:
   push:
-    branches: [ "ver/1.21.1" ]
-  pull_request:
-    branches: [ "ver/1.21.1" ]
+    branches: [ "fix/rv" ]
 
 jobs:
   build:
@@ -56,13 +54,3 @@ jobs:
       - name: Rename Paperclip Jar
         run: |
           mv ./leaf-1.21.1-mojmap.jar ./leaf-1.21.1.jar
-
-      - name: Release Leaf
-        if: github.event_name != 'pull_request'
-        uses: marvinpinto/action-automatic-releases@master
-        with:
-          title: "Leaf 1.21.1"
-          automatic_release_tag: "ver-1.21.1"
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          files: "./leaf-1.21.1.jar"
-          prerelease: false
