--- a/.github/workflows/build-1211.yml
+++ b/.github/workflows/build-1211.yml
@@ -57,6 +57,7 @@ jobs:
         run: |
           mv ./leaf-1.21.1-mojmap.jar ./leaf-1.21.1.jar
 
+      # TODO: marvinpinto/action-automatic-releases is archived, need to find new one
       - name: Release Leaf
         if: github.event_name != 'pull_request'
         uses: marvinpinto/action-automatic-releases@master
