[ci skip] Update issue template

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -65,4 +65,4 @@ body:
   - type: input
     attributes:
       label: Configuration
-      description: Link of your Leaf & Gale config files, upload any relevant log excerpts to either https://paste.gg or https://gist.github.com, save and the paste the link in this box.
+      description: Link of your Leaf & Gale config files, upload any relevant log excerpts to either https://mclo.gs or https://gist.github.com, save and the paste the link in this box.
