--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -6,7 +6,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this feature request for Leaf! Fill out the following form to your best ability to help us understand your feature request and greately improve the change of it getting added.
+        Thanks for taking the time to fill out this feature request for Leaf! Fill out the following form to your best ability to help us understand your feature request and greatly improve the change of it getting added.
 
   - type: textarea
     attributes:
