[ci skip] Update issue template
Use spark profiler link to replace providing plugins list, Leaf version and configurations, since spark profiler already includes all of them above, and more useful information

--- a/.github/ISSUE_TEMPLATE/en_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/en_bug_report.yml
@@ -43,17 +43,12 @@ body:
     validations:
       required: true
 
-  - type: textarea
-    attributes:
-      label: Plugin list
-      description: This can be found by running `/pl`
-    validations:
-      required: true
-
   - type: input
     attributes:
-      label: Leaf Version
-      description: What version of Leaf are you running? (`/version`)
+      label: Spark profiler link
+      description: |
+        Link of spark profiler, which including helpful information helps us to work with your issue,
+        see https://spark.lucko.me/docs/ to learn how to use spark.
     validations:
       required: true
 
@@ -61,8 +56,3 @@ body:
     attributes:
       label: Error log (if applicable)
       description: If you are reporting a console error, upload any relevant log excerpts to either https://mclo.gs or https://gist.github.com, save and the paste the link in this box.
-
-  - type: input
-    attributes:
-      label: Configuration
-      description: Link of your Leaf & Gale config files, upload any relevant log excerpts to either https://mclo.gs or https://gist.github.com, save and the paste the link in this box.
