--- a/.github/ISSUE_TEMPLATE/zh_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/zh_bug_report.yml
@@ -43,17 +43,12 @@ body:
     validations:
       required: true
 
-  - type: textarea
-    attributes:
-      label: 插件列表
-      description: 使用 `/pl` 指令获取插件列表，并粘贴到此处
-    validations:
-      required: true
-
   - type: input
     attributes:
-      label: Leaf 版本
-      description: 你当前所使用的 Leaf 版本？ (使用 `/version` 获取完整的版本信息，并粘贴到此处)
+      label: Spark profiler 链接
+      description: |
+        粘贴你的 Spark profiler 链接到此处, Spark profiler 往往包含了对解决此问题有用的信息，
+        查阅 https://spark.lucko.me/docs/ 来学习如何使用Spark。
     validations:
       required: true
 
@@ -61,8 +56,3 @@ body:
     attributes:
       label: 错误日志 (如存在)
       description: 请上传完整的报错信息或完整日志到 https://mclo.gs 或 https://gist.github.com ，并将链接粘贴在此处。
-
-  - type: input
-    attributes:
-      label: Leaf 和 Gale 配置
-      description: 上传你的 Leaf 和 Gale 配置到 https://mclo.gs 或 https://gist.github.com ，并将链接粘贴在此处。
