[ci skip] Fix typo

--- a/.github/ISSUE_TEMPLATE/zh_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/zh_bug_report.yml
@@ -47,7 +47,7 @@ body:
     attributes:
       label: Spark profiler 链接
       description: |
-        粘贴你的 Spark profiler 链接到此处, Spark profiler 往往包含了对解决此问题有用的信息，
+        粘贴你的 Spark profiler 链接到此处，Spark profiler 往往包含了对解决此问题有用的信息，
         查阅 https://spark.lucko.me/docs/ 来学习如何使用Spark。
     validations:
       required: true
