Update workflow to publish API automatically

--- a/.github/workflows/build-1211.yml
+++ b/.github/workflows/build-1211.yml
@@ -36,16 +36,15 @@ jobs:
           mv build/libs/leaf-paperclip-1.21.1-R0.1-SNAPSHOT-mojmap.jar ./leaf-1.21.1-mojmap.jar
           mv build/libs/leaf-paperclip-1.21.1-R0.1-SNAPSHOT-reobf.jar ./leaf-1.21.1-reobf.jar
 
-# Publish manually instead of using workflow
-#      - name: Publish API
-#        if: github.event_name != 'pull_request'
-#        run: |
-#          echo "REPO_USER=${{ secrets.REPO_USER }}" >> $GITHUB_ENV
-#          export REPO_USER=${{ secrets.REPO_USER }}
-#          echo "REPO_PASSWORD=${{ secrets.REPO_PASSWORD }}" >> $GITHUB_ENV
-#          export REPO_PASSWORD=${{ secrets.REPO_PASSWORD }}
-#          ./gradlew :leaf-api:publish
-#          ./gradlew publishDevBundlePublicationToLeafRepository -PpublishDevBundle=true
+      - name: Publish API
+        if: github.event_name != 'pull_request'
+        run: |
+          echo "REPO_USER=${{ secrets.REPO_USER }}" >> $GITHUB_ENV
+          export REPO_USER=${{ secrets.REPO_USER }}
+          echo "REPO_PASSWORD=${{ secrets.REPO_PASSWORD }}" >> $GITHUB_ENV
+          export REPO_PASSWORD=${{ secrets.REPO_PASSWORD }}
+          ./gradlew :leaf-api:publish
+          ./gradlew publishDevBundlePublicationToLeafRepository -PpublishDevBundle=true
 
       - name: Upload Leaf
         uses: actions/upload-artifact@main
