[ci skip] Fix issue template head syntax

--- a/.github/ISSUE_TEMPLATE/en_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/en_bug_report.yml
@@ -1,6 +1,6 @@
 name: EN | Bug report
 description: Create a report to help us improve
-labels: 'bug'
+labels: ["bug"]
 
 body:
   - type: markdown
@@ -14,9 +14,9 @@ body:
       description: |
         Please search to see if an issue already exists for the bug you encountered.
       options:
-      - label: I have searched the existing issues
-        required: true
-  
+        - label: I have searched the existing issues
+          required: true
+
   - type: textarea
     attributes:
       label: What behaviour is observed?
