--- a/.github/ISSUE_TEMPLATE/en_feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/en_feature_request.yml
@@ -1,6 +1,6 @@
 name: EN | Feature request
 description: Suggest an idea for Leaf
-labels: 'enhancement'
+labels: ["enhancement"]
 
 body:
   - type: markdown
