--- a/.github/ISSUE_TEMPLATE/zh_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/zh_bug_report.yml
@@ -1,6 +1,6 @@
 name: CN | 问题反馈
 description: 创建一个问题反馈来帮助我们进步！
-labels: 'bug'
+labels: ["bug"]
 
 body:
   - type: markdown
@@ -14,9 +14,9 @@ body:
       description: |
         请浏览 [Issues](https://github.com/Winds-Studio/Leaf/issues)，并检查你的问题是否已被别人汇报！
       options:
-      - label: 我已经浏览过Issue，并确保汇报的不是已知问题
-        required: true
-  
+        - label: 我已经浏览过Issue，并确保汇报的不是已知问题
+          required: true
+
   - type: textarea
     attributes:
       label: 问题描述
