[ci skip] Improve issue template checklist

--- a/.github/ISSUE_TEMPLATE/en_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/en_bug_report.yml
@@ -10,11 +10,17 @@ body:
 
   - type: checkboxes
     attributes:
-      label: Is there an existing issue for this?
+      label: Checklist
       description: |
-        Please search to see if an issue already exists for the bug you encountered.
+        Before you scroll down, select boxes below.
       options:
         - label: I have searched the existing issues
+          required: true
+        - label: I ticked all the boxes without actually reading them
+          required: false
+        - label: I am using latest Leaf build from https://github.com/Winds-Studio/Leaf/releases
+          required: true
+        - label: I tested and couldn't replicate this issue on [latest Purpur build](https://purpurmc.org/)
           required: true
 
   - type: textarea
