--- a/.github/ISSUE_TEMPLATE/zh_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/zh_bug_report.yml
@@ -10,11 +10,17 @@ body:
 
   - type: checkboxes
     attributes:
-      label: 是否已存在相关问题？
+      label: 自我检查表
       description: |
-        请浏览 [Issues](https://github.com/Winds-Studio/Leaf/issues)，并检查你的问题是否已被别人汇报！
+        在浏览并填写其他选项之前， 请先勾选以下的框.
       options:
         - label: 我已经浏览过Issue，并确保汇报的不是已知问题
+          required: true
+        - label: 我勾选了所有框, 因为我根本就没仔细看他们是什么
+          required: false
+        - label: 我正在使用从 https://github.com/Winds-Studio/Leaf/releases 下载的最新 Leaf 构建
+          required: true
+        - label: 我无法在 [Purpur 最新构建](https://purpurmc.org/) 上复现此问题
           required: true
 
   - type: textarea
