[ci skip] Fix cn issue template style

--- a/.github/ISSUE_TEMPLATE/zh_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/zh_bug_report.yml
@@ -6,15 +6,15 @@ body:
   - type: markdown
     attributes:
       value: |
-        在反馈问题之前，请确保您正在使用最新版本的 Leaf，并浏览 [Issues](https://github.com/Winds-Studio/Leaf/issues)，检查你的问题是否已被汇报！
+        在反馈问题之前, 请确保您正在使用最新版本的 Leaf, 并浏览 [Issues](https://github.com/Winds-Studio/Leaf/issues), 检查你的问题是否已被汇报！
 
   - type: checkboxes
     attributes:
       label: 自我检查表
       description: |
-        在浏览并填写其他选项之前， 请先勾选以下的框.
+        在浏览并填写其他选项之前, 请先勾选以下的框。
       options:
-        - label: 我已经浏览过Issue，并确保汇报的不是已知问题
+        - label: 我已经浏览过Issue, 并确保汇报的不是已知问题
           required: true
         - label: 我勾选了所有框, 因为我根本就没仔细看他们是什么
           required: false
@@ -40,7 +40,7 @@ body:
   - type: textarea
     attributes:
       label: 如何复现？
-      description: 简单描述复现此问题的步骤
+      description: 简单描述复现此问题的步骤。
       placeholder: |
         1. 进入服务器 '...'
         2. 输入/example '...'
@@ -53,7 +53,7 @@ body:
     attributes:
       label: Spark profiler 链接
       description: |
-        粘贴你的 Spark profiler 链接到此处，Spark profiler 往往包含了对解决此问题有用的信息，
+        粘贴你的 Spark profiler 链接到此处, Spark profiler 往往包含了对解决此问题有用的信息, 
         查阅 https://spark.lucko.me/docs/ 来学习如何使用Spark。
     validations:
       required: true
@@ -61,4 +61,4 @@ body:
   - type: input
     attributes:
       label: 错误日志 (如存在)
-      description: 请上传完整的报错信息或完整日志到 https://mclo.gs 或 https://gist.github.com ，并将链接粘贴在此处。
+      description: 请上传完整的报错信息或完整日志到 https://mclo.gs 或 https://gist.github.com , 并将链接粘贴在此处。
