--- a/.github/ISSUE_TEMPLATE/zh_feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/zh_feature_request.yml
@@ -6,11 +6,11 @@ body:
   - type: markdown
     attributes:
       value: |
-        感谢您抽出宝贵的时间为 Leaf 提交功能请求！请尽您所能填写以下表格，以帮助我们理解您的功能请求，并大大提高其被添加的机会。
+        感谢您抽出宝贵的时间为 Leaf 提交功能请求！请尽您所能填写以下表格, 以帮助我们理解您的功能请求, 并大大提高其被添加的机会。
 
   - type: textarea
     attributes:
       label: 你想加入什么功能？
-      description: 用几句话尽可能清晰，详细的描述你所需要的功能或者建议。
+      description: 用几句话尽可能清晰, 详细的描述你所需要的功能或者建议。
     validations:
       required: true
