SparklyPaper: Parallel world ticking

--- a/.github/workflows/build-1211.yml
+++ b/.github/workflows/build-1211.yml
@@ -1,10 +1,8 @@
-name: Build Leaf 1.21.1
+name: Build Leaf 1.21.1 - Parallel World Ticking
 
 on:
   push:
-    branches: [ "ver/1.21.1" ]
-  pull_request:
-    branches: [ "ver/1.21.1" ]
+    branches: [ "feat/parallel-world-tick" ]
 
 jobs:
   build:
@@ -36,16 +34,6 @@ jobs:
           mv build/libs/leaf-paperclip-1.21.1-R0.1-SNAPSHOT-mojmap.jar ./leaf-1.21.1-mojmap.jar
           mv build/libs/leaf-paperclip-1.21.1-R0.1-SNAPSHOT-reobf.jar ./leaf-1.21.1-reobf.jar
 
-      - name: Publish API
-        if: github.event_name != 'pull_request'
-        run: |
-          echo "REPO_USER=${{ secrets.REPO_USER }}" >> $GITHUB_ENV
-          export REPO_USER=${{ secrets.REPO_USER }}
-          echo "REPO_PASSWORD=${{ secrets.REPO_PASSWORD }}" >> $GITHUB_ENV
-          export REPO_PASSWORD=${{ secrets.REPO_PASSWORD }}
-          ./gradlew :leaf-api:publish
-          ./gradlew publishDevBundlePublicationToLeafRepository -PpublishDevBundle=true
-
       - name: Upload Leaf
         uses: actions/upload-artifact@main
         with:
@@ -55,14 +43,3 @@ jobs:
       - name: Rename Paperclip Jar
         run: |
           mv ./leaf-1.21.1-mojmap.jar ./leaf-1.21.1.jar
-
-      # TODO: marvinpinto/action-automatic-releases is archived, need to find new one 
-      - name: Release Leaf
-        if: github.event_name != 'pull_request'
-        uses: marvinpinto/action-automatic-releases@master
-        with:
-          title: "Leaf 1.21.1"
-          automatic_release_tag: "ver-1.21.1"
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          files: "./leaf-1.21.1.jar"
-          prerelease: false
