[ci skip] Update en bug report issue template to be same as cn bug report template

--- a/.github/ISSUE_TEMPLATE/en_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/en_bug_report.yml
@@ -6,7 +6,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Before reporting an issue make sure you are running the latest build of Leaf and checked for duplicate issues!
+        Before reporting an issue, make sure you are running the latest build of Leaf and checked for duplicate issues in [Issues](https://github.com/Winds-Studio/Leaf/issues)!
 
   - type: checkboxes
     attributes:
@@ -42,9 +42,9 @@ body:
       label: To Reproduce
       description: Steps to reproduce this behaviour
       placeholder: |
-        1. Go to '...'
-        2. Click on '...'
-        3. Scroll down to '...'
+        1. Enter server '...'
+        2. execute command /example '...'
+        3. Server crashes '...'
         4. See error
     validations:
       required: true
@@ -61,4 +61,4 @@ body:
   - type: input
     attributes:
       label: Error log (if applicable)
-      description: If you are reporting a console error, upload any relevant log excerpts to either https://mclo.gs or https://gist.github.com, save and the paste the link in this box.
+      description: If you are reporting a console error, upload any relevant errors or full log to either https://mclo.gs or https://gist.github.com, save and the paste the link in this box.
