Skip if failed publish

--- a/.github/workflows/build-1211.yml
+++ b/.github/workflows/build-1211.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Publish API
         if: github.event_name != 'pull_request'
+        continue-on-error: true
         run: |
           echo "REPO_USER=${{ secrets.REPO_USER }}" >> $GITHUB_ENV
           export REPO_USER=${{ secrets.REPO_USER }}
