--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -49,7 +49,7 @@ jobs:
           git config --global user.email 61569423+Dreeam-qwq@users.noreply.github.com
           chmod +x gradlew
 
-      - uses: actions/setup-java@v4
+      - uses: actions/setup-java@main
         with:
           distribution: 'zulu'
           java-version:  21
