--- a/.github/workflows/build-1211.yml
+++ b/.github/workflows/build-1211.yml
@@ -57,13 +57,12 @@ jobs:
         run: |
           mv ./leaf-1.21.1-mojmap.jar ./leaf-1.21.1.jar
 
-      # TODO: marvinpinto/action-automatic-releases is archived, need to find new one 
       - name: Release Leaf
         if: github.event_name != 'pull_request'
-        uses: marvinpinto/action-automatic-releases@master
+        uses: softprops/action-gh-release@master
         with:
-          title: "Leaf 1.21.1"
-          automatic_release_tag: "ver-1.21.1"
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          name: "Leaf 1.21.1"
+          tag_name: "ver-1.21.1"
+          token: "${{ secrets.GITHUB_TOKEN }}"
           files: "./leaf-1.21.1.jar"
           prerelease: false
